# toast

./: .dockerignore  .env  .gitignore  README.md  compose.yml  justfile  openapi.json  package.json  sqlite.db  sqlx.Dockerfile
backend/: Cargo.toml  Config.toml
backend/.sqlx/: query-26abe9cf7c590f81b305e168333fe5fa5a93aec03010db69dbfbb5c9be49a0c3.json  query-2944ce84e579bbb1f476abb94fcf236e7c4f919bded1d1b75acf76dd12f63e2c.json  query-36f27af52bbd70f2d9355da92834c7eddcd73fe2d8191408f6e12d7d8d8cd431.json  query-4f1261319e6c92fbd762cf98eabc67535ef0242479255d345d8a22b149047b78.json  query-6c813c718b37d3555483f9178f40b9ec9761af58f7d590f684d4b8176e91d9ca.json  query-7d238b6a9b5ea4ab816c5e877042ddcf1045a099ae24141b67dd27c27fab0765.json  query-83496912a4bc2c5f97870f2455da95e0eaa90d66b016da8ea351f017555d5adc.json  query-953786130300249f40a31411db858c448881856f1aac42a7f5709ffea8de7dd0.json  query-965c8570dd125de3efbb4272df1b1a9d4a8e11556036c9ce1911a49afa5dd9d2.json  query-a6291d83baad99587ec76c057974c3048260a852dbcac5df755aadf69d4bc22c.json  query-b3b30438277f0b00bd5616c3b55b8b1f7290e4c0d0636bb467fcd07aab9af223.json  query-d044e56b3ac13e32e071d4483d76b33c89742055f38114a34d5d25a9aa12b5e7.json  query-edf2424933f6602d625da67d22e5315a63830e1d5c87c99b95699f216fd0b9bf.json  query-f488a72195a6c51b299d18e23f29a983f8246f40d615a430bec9031e937e582c.json
backend/src/: api.rs  config.rs  dto.rs  error.rs  main.rs  repository.rs  state.rs
backend/src/api/: comments.rs  files.rs  projects.rs  users.rs
backend/src/dto/: comments.rs  projects.rs
backend/src/utils/: claims.rs  (+1 more)
(+16 files in other folders)
