[package]
name = "toast"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = "0.10.0"
axum-prometheus = "0.8.0"
axum-valid = "0.23.0"
backoff = { version = "0.4.0", features = ["tokio"] }
config = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
serde-inline-default = "0.2.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite", "time", "uuid"] }
thiserror = "2.0.11"
time = { version = "0.3.36", features = ["parsing", "serde"] }
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
